# grid_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: DECISIONS.md  session.md
frontend/: index.html
scripts/: generate_data.py
sessions/: initial_prompt.md
src/grid_agent/: __init__.py  api.py  config.py  datagen.py  dtypes.py  engine.py  graph.py  llm.py  metrics.py  persistence.py  schemas.py  sessions.py  state.py  trace.py  validator.py
src/grid_agent/prompts/: system_prompt.md
tests/: conftest.py  test_api.py  test_e2e.py  test_engine.py  test_llm.py  test_metrics.py  test_persistence_pg.py  test_schemas.py  test_sessions.py  test_state.py  test_validator.py
