[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-agent"
version = "0.2.0"
description = "Two-panel table-editing agent: structured operations, previews, undo (LangGraph + Gemini)"
requires-python = ">=3.11"
dependencies = [
    # Core data handling
    "pandas>=2.2",
    "numpy>=1.26",
    # Validation / schemas (operations are Pydantic models)
    "pydantic>=2.7",
    # Agent orchestration
    "langgraph>=0.2",
    # Gemini API (official SDK, supports structured output)
    "google-genai>=1.0",
    # Web layer
    "fastapi>=0.111",
    "uvicorn>=0.30",
    # Persistence (per-user sessions in PostgreSQL)
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    # Config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
grid-agent-generate = "grid_agent.datagen:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
grid_agent = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Belt and suspenders alongside the editable install: macOS occasionally
# marks the generated .pth file hidden (com.apple.provenance), and Python
# 3.13 skips hidden .pth files — this keeps the test suite importable
# regardless.
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import order, B bugbear, UP pyupgrade
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# B008: `Depends(...)` in parameter defaults is FastAPI's dependency-
# injection idiom, not the bug bugbear is hunting.
"src/grid_agent/api.py" = ["B008"]
